--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.11"
 django = "^5.0.6"
 ruff = "^0.4.4"
+requests = "^2.31.0"
+include = "^0.2.2"
+pre-commit = "^3.7.1"
 
 
 [build-system]
